Aggiunto endpoint dashboard/stats/ con parametri
L'endpoint permette di visualizzare le statistiche di uno o più edifici, come il numero di interventi insieme alle date e la percentuale di gravità degli interventi.
L'output ritornato è un insieme di dati aggregati di tutti gli edifici.
